Update JQuery to fix possible XSS vulnerabilities

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
     {% if page.style %}
         <link href="{{ site.baseurl }}/css/{{ page.style }}.css" rel="stylesheet">
     {% endif %}
-    <script src="{{ site.baseurl }}/js/jquery-2.2.4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js"></script>
     <script src="{{ site.baseurl }}/js/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
     <script src="{{ site.baseurl }}/js/misterblue.js"></script>
     {% include analytics.html %}
